--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" media="screen" href="assets/css/index.css" />
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Syncopate" rel="stylesheet">
+    <
     <script src="assets/javascript/game.js"></script>
 </head>
 <body>
@@ -17,6 +18,7 @@
                 <div class="jumbotron">
                     <h1>Hangman <br> Magic Spells</h1>
                     <p>Guess the spells from Harry Potter</p>
+                    <audio id="magicSound" src="assets/javascript/magicSound.mp3" preload="auto"></audio>
                 </div>
             </div>
         </div>
@@ -26,7 +28,7 @@
                 <div class="col-md-6">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Word to Guess</h3>
+                            <h3 class="panel-title">Spell to Guess</h3>
                         </div>
                         <div class="panel-body">
                             <h2 id="wordToGuess">_ _ _ _ _</h2>
